Fixed styling and comments

--- a/frontend/src/styles/Features.css
+++ b/frontend/src/styles/Features.css
@@ -1,16 +1,16 @@
-body {
+.featuresBackground {
     background-color: #F4EAE6;
     font-family: Verdana;
     border-top: 50px solid #4297A0;
 }
 
-h1 {
+.featuresTitle {
     margin: 25px 25px;
     text-align: center;
     font-size: 50px;
 }
 
-li {
+.featuresListItems {
     text-align: left;
     font-size: 25px;
 
