--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -1,3 +1,14 @@
 .nav-item{
     padding-left: 10px;
 }
+
+.link, .link:hover
+{
+    color: white;
+    text-decoration: none;
+}
+
+#navbar
+{
+    color: white;
+}
