--- a/frontend/src/styles/Team.css
+++ b/frontend/src/styles/Team.css
@@ -3,12 +3,12 @@
     padding-top: 50px;
 }
 
-.teamRow
+.team-row
 {
     padding-bottom: 32px;
 }
 
-.teamTitle
+.team-title
 {
     text-align: center;
     padding-bottom: 20px;
