--- a/frontend/src/styles/FilledCard.css
+++ b/frontend/src/styles/FilledCard.css
@@ -1,11 +1,27 @@
-.cardImg
+.card
+{
+    margin-bottom: 10px;
+}
+
+.card-img
 {
     padding: 1rem;
     min-height: '200px';
     min-width: '200px';
 }
 
-.profileCard
+@media (min-width: 768px)
 {
-    height: 100% !important;
+    .filled-card
+    {
+        max-width: 540px !important;
+    }
+}
+
+@media (max-width: 576px)
+{
+    .filled-card
+    {
+        max-width: 480px !important;
+    }
 }
